[project]
name = "tmrailwaysapi"
version = "0.0.1"
description = "Unofficial Turkmenistan Railways API written in Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.10.11",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[[tool.uv.index]]
url = "https://mirrors.sustech.edu.cn/pypi/web/simple"
default = true
